# spacylize

./: .buildinfo  README.md  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/workflows/: ci.yaml  docs.yaml  docs.yml
_modules/: index.html
_modules/spacylize/: cli.html  evaluator.html  generator.html  llm.html  llm_config.html  prompt_config.html  splitter.html  trainer.html  validator.html  visualizer.html
_sources/api/: llm_config.rst.txt  splitter.rst.txt  validator.rst.txt
api/: cli.html  evaluator.html  generator.html  llm.html  llm_config.html  prompt_config.html  splitter.html  trainer.html  validator.html  visualizer.html
docs/source/: conf.py  index.rst
docs/source/api/: cli.rst  evaluator.rst  generator.rst  llm.rst  prompt_config.rst  trainer.rst  visualizer.rst
examples/ecomerce/: promt.yaml  train.spacy  train.txt
examples/ecommerce/: llm.yaml  train.spacy  train_report.json
examples/ner/: README.md  llm.yaml  prompt.yaml
examples/textcat/: README.md  llm.yaml  prompt.yaml
spacylize/: __init__.py  cli.py  evaluator.py  generator.py  llm.py  llm_config.py  prompt_config.py  splitter.py  trainer.py  validator.py  visualizer.py
spacylize/templates/: __init__.py  base.py  ner_system.jinja2  ner_user.jinja2  textcat_system.jinja2  textcat_user.jinja2
tests/: test_cli.py  test_generator.py  test_llm.py  test_prompt_config.py  test_templates.py  test_validator.py  test_visualizer.py
