[project]
name = "spacylize"
version = "0.0.1"
description = "A SpaCy add-on for LLM-powered data generation and training."
authors = [
    { name = "Stephan Baier", email = "stephan.baier@databirds.ai" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
keywords = ["spacy", "llm", "nlp", "data generation", "training", "distillation"]

dependencies = [
    "spacy",
    "spacy-llm[huggingface] (>=0.7.3,<0.8.0)",
    "typer",
    "pyyaml (>=6.0.2,<7.0.0)",
    "spacy-transformers (>=1.3.8,<2.0.0)",
    "accelerate (>=1.6.0,<2.0.0)",
    "litellm (>=1.67.2,<2.0.0)",
    "jupyterlab (>=4.4.1,<5.0.0)"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "flake8"
]

[project.scripts]
spacylize = "spacylize.cli:app"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"
