[project]
name = "spacylize"
version = "0.0.1"
description = "A SpaCy add-on for LLM-powered data generation and training."
authors = [
    { name = "Stephan Baier" }
]
license = { text = "Apache-2.0" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
keywords = ["spacy", "llm", "nlp", "data generation", "training", "distillation"]

dependencies = [
    "litellm>=1.80.10",
    "loguru>=0.7.3",
    "pyyaml>=6.0.3",
    "spacy>=3.8.11",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "mypy",
    "flake8"
]

[project.scripts]
spacylize = "spacylize.cli:app"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
]
