[project]
name = "spacylize"
version = "0.0.1"
description = "A SpaCy add-on for LLM-powered data generation and training."
authors = [
    { name = "Stephan Baier" }
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.9,<3.13"
keywords = ["spacy", "llm", "nlp", "data generation", "training", "distillation"]

dependencies = [
    "litellm>=1.80.10",
    "loguru>=0.7.3",
    "matplotlib>=3.9.4",
    "pyyaml>=6.0.3",
    "spacy>=3.8.11",
    "sphinx>=7.4.7",
]

[project.scripts]
spacylize = "spacylize.cli:app"

[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 88
target-version = ["py311"]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pytest>=8.4.2",
]

docs = [
    "sphinx>=7",
    "sphinx-rtd-theme",
    "myst-parser",
]
